--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "api-usuarios",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "index.js", 
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
